--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   android:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,9 +20,9 @@ jobs:
         run: echo "HAXEPATH=$HAXE_STD_PATH/.." >> $GITHUB_ENV
       - name: Install Haxe dependencies
         run: |
-          haxelib git hxcpp https://github.com/FNF-SE/hxcpp --quiet
-          haxelib git format https://github.com/FNF-SE/format --quiet
-          haxelib git hxp https://github.com/FNF-SE/hxp --quiet
+          haxelib git hxcpp https://github.com/ShadowEngineTeam/hxcpp --quiet
+          haxelib git format https://github.com/ShadowEngineTeam/format --quiet
+          haxelib git hxp https://github.com/ShadowEngineTeam/hxp --quiet
       - name: Enable HXCPP compile cache
         run: echo "HXCPP_COMPILE_CACHE=~/.hxcpp" >> $GITHUB_ENV
       - name: Configure Lime
