--- a/.github/workflows/miscellaneous.yml
+++ b/.github/workflows/miscellaneous.yml
@@ -20,11 +20,11 @@ jobs:
         run: echo "HAXEPATH=$HAXE_STD_PATH/.." >> $GITHUB_ENV
       - name: Install Haxe dependencies
         run: |
-          haxelib git hxcpp https://github.com/HomuHomu833-haxelibs/hxcpp --quiet
-          haxelib git format https://github.com/HomuHomu833-haxelibs/format --quiet
-          haxelib git hxp https://github.com/HomuHomu833-haxelibs/hxp --quiet
-          haxelib git openfl https://github.com/HomuHomu833-haxelibs/openfl --quiet
-          haxelib git svg https://github.com/HomuHomu833-haxelibs/svg --quiet
+          haxelib git hxcpp https://github.com/ShadowEngineTeam/hxcpp --quiet
+          haxelib git format https://github.com/ShadowEngineTeam/format --quiet
+          haxelib git hxp https://github.com/ShadowEngineTeam/hxp --quiet
+          haxelib git openfl https://github.com/FunkinCrew/openfl 5399946b68fd98f345d6b3e52b95ed6b78bf427c --quiet
+          haxelib git svg https://github.com/openfl/svg d74c6ef5ee2e8656a69a36c79e67a09086c6a9a4 --quiet
       - name: Enable HXCPP compile cache
         run: echo "HXCPP_COMPILE_CACHE=~/.hxcpp" >> $GITHUB_ENV
       - name: Configure Lime
